# event-driven-app

./: .gitignore  Makefile  main.py  pyproject.toml
apps/api/: dependencies.py  main.py
apps/api/models/: checkin.py  vagas.py
apps/api/routes/: checkin.py  vagas.py
apps/stream/: main.py
apps/stream/consumers/: checkin_consumer.py  orchestrator.py  robot_consumer.py  spot_consumer.py
apps/stream/logging/: logger.py
apps/stream/messaging/: topic.py
apps/stream/mqtt/: mqtt_client.py  robot_service.py
apps/stream/read_models/: flow_status_repo.py
apps/stream/simulator/: esp32_simulador.py
apps/stream/utils/: connection.py
core/: config.py
