[project]
name = "event-driven-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "uvicorn[standard]>=0.36.0",
]
[tool.uv.scripts]
dev = "fastapi dev app/main.py"
uvicorn-dev = "uvicorn app.main:app --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
