[project]
name = "event-driven-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "faststream[rabbit]>=0.5.48",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.36.0",
]

