[project]
name = "event-driven-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.117.1",
    "faststream[rabbit]>=0.5.48",
    "gmqtt>=0.7.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.36.0",
]

